; ModuleID = '/home/carl/AnghaBench/tig/src/extr_tree.c_tree_compare_entry.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_tree.c_tree_compare_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.line = type { i64 }

@LINE_DIRECTORY = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.line*, %struct.line*)* @tree_compare_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tree_compare_entry(%struct.line* %0, %struct.line* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.line*, align 8
  %5 = alloca %struct.line*, align 8
  store %struct.line* %0, %struct.line** %4, align 8
  store %struct.line* %1, %struct.line** %5, align 8
  %6 = load %struct.line*, %struct.line** %4, align 8
  %7 = getelementptr inbounds %struct.line, %struct.line* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load %struct.line*, %struct.line** %5, align 8
  %10 = getelementptr inbounds %struct.line, %struct.line* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %8, %11
  br i1 %12, label %13, label %21

13:                                               ; preds = %2
  %14 = load %struct.line*, %struct.line** %4, align 8
  %15 = getelementptr inbounds %struct.line, %struct.line* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load i64, i64* @LINE_DIRECTORY, align 8
  %18 = icmp eq i64 %16, %17
  %19 = zext i1 %18 to i64
  %20 = select i1 %18, i32 -1, i32 1
  store i32 %20, i32* %3, align 4
  br label %27

21:                                               ; preds = %2
  %22 = load %struct.line*, %struct.line** %4, align 8
  %23 = call i32 @tree_path(%struct.line* %22)
  %24 = load %struct.line*, %struct.line** %5, align 8
  %25 = call i32 @tree_path(%struct.line* %24)
  %26 = call i32 @strcmp(i32 %23, i32 %25)
  store i32 %26, i32* %3, align 4
  br label %27

27:                                               ; preds = %21, %13
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i32 @strcmp(i32, i32) #1

declare dso_local i32 @tree_path(%struct.line*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
